[BlackBerry] Find a proper fix for the WebPagePrivate::enqueueRenderingOfClippedContentOfScrollableNodeAfterInRegionScrolling hack https://bugs.webkit.org/show_bug.cgi?id=98517 PR #137382

Reviewed by Yong Li.
Patch by Antonio Gomes <agomes@rim.com>

We've generalized composited in-region scrolling, originally only applicable
to block elements, to inner frames (see PR #197093). Past that, we no longer
need to force repaints of offscreen areas when we finish scrolling, since translating
the Layer takes care of properly invalidating it. Thus, remove this method.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::notifyInRegionScrollStopped):
* Api/WebPage_p.h:
(WebPagePrivate):

Canonical link: https://commits.webkit.org/116493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130501 268f45cc-cd09-0410-ab3c-d52691b4dbfc