Source/WebKit/blackberry/Api/WebPage.cpp
@@ -1432,7 +1432,6 @@ void WebPage::scrollBy(const Platform::IntSize& delta)
 void WebPagePrivate::notifyInRegionScrollStopped()
 {
     if (m_inRegionScroller->d->isActive()) {
-        enqueueRenderingOfClippedContentOfScrollableAreaAfterInRegionScrolling();
         // Notify the client side to clear InRegion scrollable areas before we destroy them here.
         std::vector<Platform::ScrollViewBase*> emptyInRegionScrollableAreas;
         m_client->notifyInRegionScrollableAreasChanged(emptyInRegionScrollableAreas);
@@ -1443,52 +1442,6 @@ void WebPagePrivate::notifyInRegionScrollStopped()
 void WebPage::notifyInRegionScrollStopped()
 {
     d->notifyInRegionScrollStopped();
-}
-
-void WebPagePrivate::enqueueRenderingOfClippedContentOfScrollableAreaAfterInRegionScrolling()
-{
-    // If no scrolling was even performed, bail out.
-    if (m_inRegionScroller->d->m_needsActiveScrollableAreaCalculation)
-        return;
-
-    InRegionScrollableArea* scrollableArea = static_cast<InRegionScrollableArea*>(m_inRegionScroller->d->activeInRegionScrollableAreas()[0]);
-    ASSERT(scrollableArea);
-    Node* scrolledNode = scrollableArea->layer()->enclosingElement();
-
-    if (scrolledNode->isDocumentNode()) {
-        Frame* frame = static_cast<const Document*>(scrolledNode)->frame();
-        ASSERT(frame);
-        if (!frame)
-            return;
-        ASSERT(frame != m_mainFrame);
-        FrameView* view = frame->view();
-        if (!view)
-            return;
-
-        // Steps:
-        // #1 - Get frame rect in contents coords.
-        // #2 - Get the clipped scrollview rect in contents coords.
-        // #3 - Take transform into account for 1 and 2.
-        // #4 - Subtract 2 from 1, so we know exactly which areas of the frame
-        //      are offscreen, and need async repainting.
-        FrameView* mainFrameView = m_mainFrame->view();
-        ASSERT(mainFrameView);
-        IntRect frameRect = view->frameRect();
-        frameRect = frame->tree()->parent()->view()->contentsToWindow(frameRect);
-        frameRect = mainFrameView->windowToContents(frameRect);
-
-        IntRect visibleWindowRect = getRecursiveVisibleWindowRect(view);
-        IntRect visibleContentsRect = mainFrameView->windowToContents(visibleWindowRect);
-
-        IntRect transformedFrameRect = mapToTransformed(frameRect);
-        IntRect transformedVisibleContentsRect = mapToTransformed(visibleContentsRect);
-
-        Platform::IntRectRegion offscreenRegionOfIframe
-            = Platform::IntRectRegion::subtractRegions(Platform::IntRect(transformedFrameRect), Platform::IntRect(transformedVisibleContentsRect));
-
-        if (!offscreenRegionOfIframe.isEmpty())
-            m_backingStore->d->m_renderQueue->addToQueue(RenderQueue::RegularRender, offscreenRegionOfIframe.rects());
-    }
 }
 
 void WebPagePrivate::setHasInRegionScrollableAreas(bool b)
